--- a/idex.html
+++ b/idex.html
@@ -80,7 +80,7 @@
         </section>
 
         <footer class=" container-fluid text-center bg-footer margin"
-            <p>Desemvolvido Por Yuji Asano.</p>
+            <p>Desenvolvido Por Yuji Asano.</p>
         </footer>
     </body>
 </html>
